$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-06-06 [C] Added new string when in upload approval mode insteas of empty album message {SaWey}
2009-06-06 [B] Fixed IM being selected in installation when it's not working {SaWey}
2009-06-05 [C] Fixed bad displaying admin menu buttons on thumnails view with longer names as in english {Frantz}
2009-06-05 [B] Re-added record for encrypted passwords into basic.sql (thread ID 59916) {GauGau}
2009-06-05 [M] Removed the include folder is_writable check and warning message (thread 59896) {Abbas}
2009-06-05 [B] Check for default values in admin section not working correctly {SaWey}
2009-06-04 [C] Added nicer debug_output {GauGau}
2009-06-04 [O] Use username from users table now, dropping owner_name field in pictures table {Nibbler}
2009-06-04 [M] Added missing SVN header information {GauGau}
2009-06-03 [O] Use newer album selection code for 'sort my pictures' page, reduces query count and memory usage {Nibbler}
2009-06-03 [O] Moved combi flags from docs to images folder {GauGau}
2009-06-03 [D] Fixing broken documentation navigation for IE (thread ID 59772) {GauGau}
2009-06-02 [D] Updating French doc {Frantz}
2009-06-02 [C] Updating french lang file {Frantz}
2009-06-02 [A] Added config option to allow users rating their own files {eenemeenemuu}
2009-06-02 [B] Fixed 'missing query' known issue {Nibbler}
2009-06-02 [D] Added section to docs about debug_output {GauGau}
2009-06-02 [D] Added URL parameter expand_all for docs to allow reference to anchors within sections that are collapsed out of the box {GauGau}